// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PingListExpandedRow doesn't render list items if the body field is undefined 1`] = `
<EuiFlexGroup
  direction="column"
>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`PingListExpandedRow doesn't render list items if the http field is undefined 1`] = `
<EuiFlexGroup
  direction="column"
>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`PingListExpandedRow doesn't render list items if the response field is undefined 1`] = `
<EuiFlexGroup
  direction="column"
>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`PingListExpandedRow renders error information when an error field is present 1`] = `
<EuiFlexGroup
  direction="column"
>
  <EuiFlexItem>
    <EuiCallOut
      color="danger"
    >
      <EuiTitle
        size="xs"
      >
        <h5>
          Response Body
        </h5>
      </EuiTitle>
      <BodyDescription
        body={
          Object {
            "bytes": 1200000,
            "content": "<http><head><title>The Title</title></head><body></body></http>",
            "hash": "testhash",
          }
        }
      />
      <EuiSpacer
        size="s"
      />
      <BodyExcerpt
        content="<http><head><title>The Title</title></head><body></body></http>"
      />
      <EuiDescriptionList
        listItems={
          Array [
            Object {
              "description": "Forbidden",
              "title": "Error",
            },
          ]
        }
      />
    </EuiCallOut>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`PingListExpandedRow renders expected elements for valid props 1`] = `
<EuiFlexGroup
  direction="column"
>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
    >
      <EuiTitle
        size="xs"
      >
        <h5>
          Response Body
        </h5>
      </EuiTitle>
      <BodyDescription
        body={
          Object {
            "bytes": 1200000,
            "content": "<http><head><title>The Title</title></head><body></body></http>",
            "hash": "testhash",
          }
        }
      />
      <EuiSpacer
        size="s"
      />
      <BodyExcerpt
        content="<http><head><title>The Title</title></head><body></body></http>"
      />
    </EuiCallOut>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`PingListExpandedRow renders link to docs if body is not recorded but it is present 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-l-flexStart-stretch-column"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-1"
  >
    <div
      class="euiPanel euiPanel--primary euiPanel--paddingMedium euiCallOut euiCallOut--primary emotion-euiPanel-none-m-primary-euiCallOut"
    >
      <div
        class="euiText emotion-euiText-s-euiTextColor-default"
      >
        <h5
          class="euiTitle emotion-euiTitle-xs"
        >
          Response Body
        </h5>
        <div
          class="euiText emotion-euiText-m"
        >
          Body size is 1MB.
        </div>
        <div
          class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
        />
        <div
          class="euiText emotion-euiText-m"
        >
          Body not recorded. Read our 
          <a
            class="euiLink emotion-euiLink-primary"
            data-test-subj="syntheticsDocLinkForBodyDocsLink"
            href="https://www.elastic.co/guide/en/beats/heartbeat/current/configuration-heartbeat-options.html#monitor-http-response"
            rel="noopener noreferrer"
            target="_blank"
          >
            docs
            <span
              class="emotion-EuiExternalLinkIcon"
              data-euiicon-type="popout"
              role="presentation"
            />
            <span
              class="emotion-euiScreenReaderOnly"
            >
              (external, opens in a new tab or window)
            </span>
          </a>
           for more information on recording response bodies.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PingListExpandedRow shallow renders link to docs if body is not recorded but it is present 1`] = `
<EuiFlexGroup
  direction="column"
>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
    >
      <EuiTitle
        size="xs"
      >
        <h5>
          Response Body
        </h5>
      </EuiTitle>
      <BodyDescription
        body={
          Object {
            "bytes": 1200000,
            "hash": "testhash",
          }
        }
      />
      <EuiSpacer
        size="s"
      />
      <DocLinkForBody />
    </EuiCallOut>
  </EuiFlexItem>
</EuiFlexGroup>
`;
